rev 17:
* internal parser / highlighter / indenter system unchanged
* major rewrite of wow interfacing code, including disabling / enabling
* fixed broken caching mechanism
* fixed problem with MaxLetters and MaxBytes causing text disappearing
* fixed bug with lots of newlines appended when typing an unfinished lua string
* stopped recoloring upon text change - instead, it gets done in an OnUpdate-loop, if the text has been recently changed.
This should significantly improve performance when pasting text. Now the editbox only gets recolored after 0.2 seconds of inactivity

* deprecated, but still working:
- lib.addSmartCode -- replaced by lib.enable

* new functions:
- lib.enable(editbox [, colorTable [, tabWidth]])
- lib.disable(editbox)

* Useful properties to set. Note that after a change, you need to manually call lib.indentEditbox or lib.colorCodeEditbox
 for changes to take effect:
- editbox.faiap_colorTable
- editbox.faiap_tabWidth