@@ -5,7 +5,34 @@ function readAll(file)
      if not f then return "" end
      local content = f:read("*all")
      f:close()
-     return content
+     return content:gsub("\r", "")
+end
+
+function writeAll(file, text)
+     local f = io.open(file, "w")
+     assert(f ~= nil)
+     f:write(text:gsub("\r", ""))
+     f:close()
+end
+
+function compareText(a, b)
+    local len = math.min(a:len(), b:len())
+    local line = 1
+    local col = 0
+    for i = 1, len do
+        col = col + 1
+        if a:byte(i) == string.byte("\n", 1) then
+	        line = line + 1
+	        col = 1
+        end
+        if a:byte(i) ~= b:byte(i) then
+	        return "Diff at character " .. tostring(line) .. ":" .. tostring(col) .. ": " .. tostring(a:byte(i)) .. " <> " .. tostring(b:byte(i))
+	    end
+    end
+    if a:len() ~= b:len() then
+        return "Different lengths"
+    end
+    return nil
 end
 
 -- currently unused, just saved for future refactoring
@@ -45,7 +72,10 @@ function testIndenter(i)
 
     local colorTable = lib.defaultColorTable
     local actual = lib.indentCode(input, 4, colorTable, i)
-    assert(output == actual, "Failure, got:\n" .. actual)
+	if output ~= actual then
+	  writeAll("test_output_actual.txt", actual)
+      assert(output == actual, compareText(output, actual))
+	end
 end
 
 
@@ -72,3 +102,17 @@ end
 
 testAddCustomColor()
 
+function testPadWithLinebreaks()
+    local lib = IndentationLib
+
+    local actual = lib.padWithLinebreaks("")
+    assert("\n\n" == actual, "Failure, got:\n" .. actual)
+
+    local actual = lib.padWithLinebreaks("if true then\n\end\n   ")
+    assert("if true then\n\end\n   \n" == actual, "Failure, got:\n" .. actual)
+
+    local actual = lib.padWithLinebreaks("local x=1\n\n")
+    assert("local x=1\n\n" == actual, "Failure, got:\n" .. actual)
+
+end
+testPadWithLinebreaks()
